# papa

./: .gitignore
ansible/: deploy.playbook
ansible/roles/papa/tasks/: main.yaml
ansible/roles/papa/templates/: papa.conf
ansible/roles/papa/vars/: main.yaml
pcbs/: xmega-sonares.pro  xmega-sonares.sch
src/arduino/: arduino.ino
src/mbed/encoder_publisher/: qencoder.cpp  sencoder.cpp
src/mbed_nucleo/: Makefile  VNH5019.cpp  VNH5019.h  VNH5019Accel.cpp  VNH5019Accel.h  main.cpp
src/papa_bringup/: CMakeLists.txt  package.xml
src/papa_bringup/etc/: ros-system-bringup.service  ros-system-bringup.sh
src/papa_bringup/etc/interfaces.d/: 50-ethernet-config.cfg
src/papa_bringup/launch/: 3dsensor.launch  startup.launch
src/papa_bringup/src/: camera_node  odom_node  sonar_publisher  supervisor
src/papa_description/: CMakeLists.txt  package.xml
src/papa_description/launch/: view_model.launch
src/papa_description/meshes/: back_shell_left.stl  back_shell_right.stl  papa_design.scad
src/papa_description/rviz/: remote.rviz
src/papa_description/urdf/: arlo.urdf.xacro  papa.urdf.xacro
src/papa_navigation/: CMakeLists.txt  package.xml
src/papa_navigation/launch/: amcl_demo.launch  gmapping_demo.launch
src/papa_navigation/launch/includes/: move_base.launch.xml
src/papa_navigation/maps/: empty_map.pgm
src/papa_visualization/: CMakeLists.txt  package.xml
src/papa_visualization/config/: papa_visualization.rviz
src/papa_visualization/launch/: papa_visualization.launch
src/rosserial/rosserial_mbed/: CMakeLists.txt
src/rosserial/rosserial_mbed/msg/: papa_imu.msg  papa_sonar.msg  wheel_count.msg
