<package>
  <name>papa_navigation</name>
  <version>1.0.0</version>
  <description>papa_navigation</description>
  <maintainer email="turtlebot@osrfoundation.org">OSRF</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/turtlebot_navigation</url>
  <url type="repository">https://github.com/cdrfiuba/papa</url>
  <author>Javier Choclin</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>tf</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>tf</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>map_server</run_depend>  
  <run_depend>amcl</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>papa_bringup</run_depend>
  <run_depend>dwa_local_planner</run_depend>

  <export>

  </export>
</package>
